--- a/assignment/public/index.html
+++ b/assignment/public/index.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
         <div ui-view></div>
     </div>
 
