--- a/apiko/task_2/index.html
+++ b/apiko/task_2/index.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-<!--<button>Get all posts</button>-->
-<div id="result"> </div>
-<div id="comments"></div>
+<div id="root"></div>
 <script src="main.js"></script>
 </body>
 </html>
